# GaugePredict

./: README.md  pyproject.toml  test_new_functions.py
Examples/: GaugePredict_Downloader_Notebook.ipynb  TrainingNotebook.ipynb  TrainingNotebook.org
Examples/.ipynb_checkpoints/: GaugePredict_Downloader_Notebook-checkpoint.ipynb  GaugePredict_Downloader_Notebook-working-checkpoint.ipynb
Examples/shapefiles/.ipynb_checkpoints/: GaugePredict_Downloader_Notebook-working-checkpoint.ipynb
Examples/shapefiles/HUC_Zones/HUC01/: WBDHU2.dbf  WBDHU2.shp  WBDHU2.shx
Examples/shapefiles/HUC_Zones/HUC02/: WBDHU2.dbf  WBDHU2.shp  WBDHU2.shx
Examples/shapefiles/HUC_Zones/HUC03/: WBDHU2.dbf  WBDHU2.shp  WBDHU2.shx
Examples/shapefiles/HUC_Zones/HUC04/: WBDHU2.dbf  WBDHU2.shx
Examples/shapefiles/HUC_Zones/HUC05/: WBDHU2.dbf  WBDHU2.shp  WBDHU2.shx
Examples/shapefiles/HUC_Zones/HUC06/: WBDHU2.dbf  WBDHU2.shp  WBDHU2.shx
Examples/shapefiles/HUC_Zones/HUC07/: WBDHU2.dbf  WBDHU2.shp  WBDHU2.shx
Examples/shapefiles/HUC_Zones/HUC08/: WBDHU2.dbf  WBDHU2.shp  WBDHU2.shx
Examples/shapefiles/HUC_Zones/HUC09/: WBDHU2.dbf  (+2 more)
Examples/shapefiles/MSRB/: Miss_RiverBasin_metadata.xml
GaugePredict/: __init__.py  downloader.py  downloader_test.py  downloaderworking.py  predict.py  predictworking.py  predictworking2.py  routines-outdated.py  routines.py  routinesworking.py
GaugePredict.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
GaugePredict/.ipynb_checkpoints/: downloader-checkpoint.py  downloader_test-checkpoint.py  routines-checkpoint.py
joss/: paper.md
(+26 files in other folders)
